--- a/NewYork/css/style.css
+++ b/NewYork/css/style.css
@@ -1,4 +1,4 @@
-/* Root CSS reset of margin/padding */
+/* CSS reset of all margin/padding (* star means all selectors) */
 
 *
 {
@@ -25,7 +25,6 @@ header
     text-transform: uppercase;
     line-height: 100px;
     font-size: 40px;
-    font-weight: 100;
 }
 
 header h1
@@ -116,8 +115,8 @@ h2, p
 .right-column img
 {
     width: 90%;
-    float: right;
     height: auto;
+    float: right;
 }
 
 /* Footer styling */
