--- a/Grid/grid.css
+++ b/Grid/grid.css
@@ -23,8 +23,19 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.griditem section
+{
+    padding: 0 2rem;
+}
+
+.griditem article
+{
+    margin: 2rem 0;
 }
 
 header
