--- a/Grid/grid.css
+++ b/Grid/grid.css
@@ -47,6 +47,11 @@ header
 .side1
 {
     grid-area: side1;
+    
+}
+
+.side1, .side2
+{
     background-color: hsl(209, 80%, 50%);
     display: none;
 }
@@ -66,8 +71,7 @@ main
 .side2
 {
     grid-area: side2;
-    background-color: hsl(209, 80%, 50%);
-    display: none;
+
 }
 
 footer
@@ -80,10 +84,6 @@ footer
 {
     .gridcontainer
     {
-        width: 100%;
-        height: 100vh;
-        color: hsl(209, 10%, 100%);
-        display: grid;
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: 1fr 4fr 1fr;
         grid-template-areas: 
