--- a/JavaScript/Slideshow/css/js-slideshow.css
+++ b/JavaScript/Slideshow/css/js-slideshow.css
@@ -29,31 +29,30 @@ body
 
 .slideshow img
 {
-    /* transform: translateX(100%);
+    transform: translateX(100%);
     transition: transform 1s;
-    transition-delay: 5ms; */
-    opacity: 0;
-    transition: opacity 1s;
+    transition-delay: 5ms;
+    /* opacity: 0;
+    transition: opacity 1s; */
     position: absolute;
-    z-index: 3;
-    opacity: 0;
+    z-index: 2;
+    
 }
 
 .slideshow .currentimg
 {
-    /* transform: translateX(0);
-    transition: transform 1s; */
-    opacity: 1;
+    transform: translateX(0);
+    transition: transform 1s;
+    /* opacity: 1; */
     position: absolute;
     z-index: 5;
-    opacity: 1;
 }
 
 .slideshow .previousimg
 {
-    /* transform: translateX(-100%); */
-    /* transition: transform 1s; */
-    opacity: 0;
+    transform: translateX(-100%); 
+    transition: transform 1s;
+    /* opacity: 0; */
     position: absolute;
     z-index: 3;
 }
