Redeploying - commit all changes

--- a/Grid-Loesning/grid.css
+++ b/Grid-Loesning/grid.css
@@ -5,20 +5,20 @@
 
 body
 {
-    width: 100vw;
     height: 100vh;
-    color: hsl(209, 10%, 100%);
+    color: hsl(20, 10%, 100%);
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 80px 80px auto 80px;
+    grid-template-rows: 80px 80px auto 80px 80px;
     grid-template-areas: 
     "header"
     "nav"
     "main"
+    "nav2"
     "footer";
 }
 
-.griditem
+body > *
 {
     display: flex;
     flex-direction: column;
@@ -26,12 +26,12 @@ body
     align-items: center;
 }
 
-.griditem section
+section
 {
-    margin: 0 2rem;
+    margin: 2rem;
 }
 
-.griditem article
+article
 {
     margin: 2rem 0;
 }
@@ -39,30 +39,38 @@ body
 header
 {
     grid-area: header;
-    background-color: hsl(209, 50%, 30%);
+    background-color: hsl(20, 50%, 30%);
 }
 
-aside.griditem /* Virker ikke med kun aside pga specificity - overrides af .griditem display: flex - snak om specificity! */
+body > div
 {
-    background-color: hsl(209, 80%, 50%);
+    grid-area: nav2;
+    background-color: hsl(20, 30%, 40%);
+}
+
+aside
+{
+    background-color: hsl(20, 80%, 50%);
+    display: none;
 }
 
 nav
 {
     grid-area: nav;
-    background-color: hsl(209, 30%, 60%);
+    background-color: hsl(20, 30%, 60%);
 }
 
 main
 {
     grid-area: main;
-    background-color: hsl(209, 20%, 80%);
+    background-color: hsl(20, 20%, 80%);
+    padding: 2rem 0;
 }
 
 footer
 {
     grid-area: footer;
-    background-color: hsl(209, 50%, 30%);
+    background-color: hsl(20, 50%, 30%);
 }
 
 @media only screen and (min-width: 1000px)
@@ -70,17 +78,17 @@ footer
     body
     {
         grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: 1fr 4fr 1fr;
+        grid-template-rows: 3fr 1fr 13fr 3fr;
         grid-template-areas: 
         "header header header header header header"
-        "side1 nav main main main side2"
+        "nav nav nav nav nav2 nav2"
+        "side1 main main main side2 side2"
         "footer footer footer footer footer footer";
     }
 
     aside:first-of-type
     {
         grid-area: side1;
-        
     }
 
     aside:last-of-type
@@ -88,7 +96,7 @@ footer
         grid-area: side2;
     }
 
-    aside.griditem /* Virker ikke med kun aside pga specificity - overrides af .griditem display: flex */
+    aside
     {
         display: flex;
     }
