--- a/Grid-Opgave/grid.css
+++ b/Grid-Opgave/grid.css
@@ -5,32 +5,45 @@
 
 body
 {
-    width: 100vw;
-    height: 100vh;
-    color: hsl(209, 10%, 100%);
+    color: hsl(20, 10%, 100%);
+}
+
+section
+{
+    margin: 0 2rem;
+}
+
+article
+{
+    margin: 2rem 0;
 }
 
 header
 {
-    background-color: hsl(209, 50%, 30%);
+    background-color: hsl(20, 50%, 30%);
 }
 
-nav
+body > div
 {
-    background-color: hsl(209, 30%, 60%);
-}
-
-main
-{
-    background-color: hsl(209, 20%, 80%);
+    background-color: hsl(20, 30%, 40%);
 }
 
 aside
 {
-    background-color: hsl(209, 80%, 50%);
+    background-color: hsl(20, 80%, 50%);
+}
+
+nav
+{
+    background-color: hsl(20, 30%, 60%);
+}
+
+main
+{
+    background-color: hsl(20, 20%, 80%);
 }
 
 footer
 {
-    background-color: hsl(209, 50%, 30%);
+    background-color: hsl(20, 50%, 30%);
 }
