--- a/NewYork-CSSVariables/css/style.css
+++ b/NewYork-CSSVariables/css/style.css
@@ -1,20 +1,4 @@
-:root
-{
-    /* Definition af hovedfarve og kontrastfarve. Disse defineres i :root så man er sikker på, at man har adgang til dem overalt i stylesheetet */
-    --main-hue: 0;
-    --main-contrast: calc(var(--main-hue) + 180);
-
-    /* Hovedfarve og kontrastfarve bruges til at definere forskellige hsl-farvevariabler, som kan bruges overalt på siden. Ved at skifte --main-hue ændres hele farveskemaet nemt */
-
-    --main-color: hsl(var(--main-hue), 44%, 81%);
-    --light-main-color: hsl(var(--main-hue), 44%, 95%);
-    --medium-dark-main-color: hsl(var(--main-hue), 44%, 31%);
-    --dark-main-color: hsl(var(--main-hue), 40%, 11%);
-    --contrast-color: hsl(var(--main-contrast), 50%, 80%);
-    --border: 2px solid var(--light-main-color);
-}
-
-/* Root CSS reset of margin/padding */
+/* CSS reset of margin/padding */
 
 *
 {
@@ -24,12 +8,19 @@
 
 /* Main styling */
 
+html
+{
+    min-height: 100vh;
+}
+
 body
 {
+    display: flex;
+    flex-direction: column;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    height: 100vh;
-    background-color: var(--contrast-color);
-    color: var(--dark-main-color);
+    height: 100%;
+    background-color: hsl(180, 20%, 90%);
+    color: hsl(0, 40%, 11%);
 }
 
 /* Header styling */
@@ -37,7 +28,7 @@ body
 header
 {
     height: 100px;
-    background-color: var(--medium-dark-main-color);
+    background-color: hsl(0, 40%, 70%);
     text-align: center;
     text-transform: uppercase;
     line-height: 100px;
@@ -47,18 +38,36 @@ header
     justify-content: space-between;
 }
 
-header h1
+header .headerLetter
 {
-    color: var(--light-main-color);
+    background-color: hsl(0, 40%, 11%);
+    height: 100px;
+    width: 100px;
 }
+
+header .headerLetter h1
+{
+    color:  hsl(0, 40%, 70%);
+}
+
+header .headerLetter a, header h1 a
+{
+    text-decoration: none;
+}
+
+header h1 a
+{
+    color: hsl(0, 40%, 11%);
+}
+
 
 /* Nav/footer styling */
 
 nav, footer
 {
-    background-color: var(--dark-main-color);
+    background-color: hsl(0, 40%, 40%);
     height: 40px;
-    color: var(--light-main-color);
+    color: hsl(0, 40%, 90%);
     line-height: 40px;
     display: flex;
     justify-content: space-between;
@@ -78,10 +87,15 @@ nav ul li
     
 }
 
+nav ul li:hover
+{
+    background-color: hsl(0, 40%, 31%);
+}
+
 nav ul li a
 {
     
-    border-right: var(--border);
+    border-right: 2px solid hsl(0, 40%, 90%);
     color: inherit;
     text-decoration: none;
     padding-right: 10px;
@@ -103,6 +117,7 @@ nav img
 main
 {
     margin: 50px 30px;
+    flex-grow: 1;
 }
 
 h2, p
@@ -128,8 +143,8 @@ article div:last-of-type
 
 article div:last-of-type img
 {
-    width: 90%;
-    height: auto;
+    width: auto;
+    max-height: 100%;
 }
 
 /* Footer styling */
