--- a/Hamburgermenu-Bring/css/newstyle.css
+++ b/Hamburgermenu-Bring/css/newstyle.css
@@ -2,6 +2,24 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;700&display=swap');
 
+/* Animationer */
+
+@keyframes heading
+{
+    0%
+    {
+        opacity: 0;
+    }
+    50%
+    {
+        transform: scale(1.5);
+    }
+    100%
+    {
+        opacity: 1;
+    }
+}
+
 /* Nulstilling af alle margener og padding */
 
 *
@@ -12,10 +30,20 @@
 
 /* Mobile-first styling */
 
+html
+{
+    scroll-behavior: smooth;
+}
+
 body
 {
     font-family: 'Mukta', sans-serif;
     line-height: 1.8;
+}
+
+body > *
+{
+    position: relative;
 }
 
 header
@@ -117,14 +145,27 @@ nav ul a
 
 nav ul li
 {
-    padding: 0 1rem;
     width: 100%;
     text-align: right; 
 }
 
+
 nav ul li:hover
 {
     background-color: hsla(94, 50%, 51%, 0.5); 
+}
+
+nav ul li a::before
+{
+    content: "<";
+    margin-right: 0.8rem;
+    color:hsl(94, 50%, 51%);
+    font-weight: 800;
+}
+
+nav ul li a
+{
+    padding-right: 1rem;
 }
 
 /* Styling af indhold */
@@ -137,36 +178,48 @@ section
     overflow: hidden;
 }
 
-section:nth-of-type(3n+1)
+section:nth-of-type(3n+3)
 {
     background-color: hsl(94, 50%, 51%); /* Hver tredje section er grøn */
 }
 
-section:nth-of-type(3n+3)
+section:nth-of-type(3n+1)
 {
     background-color: hsl(49, 84%, 57%); /* Hver tredje section er gul */
 }
     
-/* Speciel styling første og sidste section-tag med billeder med tekst på */
-section:first-of-type article, section:last-of-type article
+/* Speciel styling første section-tag med billeder med tekst på */
+section:first-of-type article
 {
     margin: 0;
     display: flex; /* For nemt at kunne centrere teksten ovenpå billedet */
     flex-direction: column;
-    height: 100%;
+    height: 500px;
     justify-content: center;
-    position: absolute;
     z-index: 5;
     color: white;   
 }
 
-section:first-of-type h1, section:last-of-type h1
+section:first-of-type
+{
+    background-image: url("../img/hero-04.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+section:first-of-type h1
 {
     text-transform: uppercase;
     font-size: 2rem;
 }
 
-section:first-of-type p, section:last-of-type p
+section:first-of-type h1 span
+{
+    /* transform: scale(1); */
+    animation: heading 1s 1s both;
+}
+
+section:first-of-type p
 {
     font-size: 1.5rem;
     text-align: center;
@@ -237,7 +290,7 @@ h3
 }
 
 /* Styling af "buttons" - a-tags som skal ligne knapper */
-.readmore, .seekjob
+.readmore
 {
     
     text-decoration: none;
@@ -256,7 +309,7 @@ h3
 
 .readmore:hover
 {
-    background-color: lightgray;
+    background-color: rgb(104, 102, 102);
 }
 
 .seekjob
@@ -306,12 +359,22 @@ footer h3
 
 @media only screen and (min-width: 720px)
 {
+    nav ul
+    {
+        left: 70%;
+    }
+
+    section:first-of-type article
+    {
+        height: 800px;
+    }
+
     section:first-of-type h1, section:last-of-type h1
     {
         font-size: 5rem;
     }
     
-    section:first-of-type p, section:last-of-type p
+    section:first-of-type p
     {
         font-size: 2rem;
     }
