Grid opgave Commencal Bikes

--- a/Flexbox/Selvstudie/style.css
+++ b/Flexbox/Selvstudie/style.css
@@ -19,6 +19,18 @@ body > *
     padding: 1rem;
 }
 
+.forsidegalleri
+{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.forsidegalleri div
+{
+    width: 33%;
+}
+
 header
 {
     background-color: hsl(0, 40%, 80%);
